--- a/jenkinsfile
+++ b/jenkinsfile
@@ -65,8 +65,8 @@ pipeline {
 
                         echo "=== Running SonarQube Scanner ==="
                         sonar-scanner \
-                        -Dsonar.organization="vcl02" \
-                        -Dsonar.projectKey="vcl02_vcl02" \
+                        -Dsonar.organization="navg463-netizen" \
+                        -Dsonar.projectKey="navg463-netizen_Repo_31" \
                         -Dsonar.host.url=https://sonarcloud.io \
                         -Dsonar.sources=. \
                         -Dsonar.python.coverage.reportPaths=coverage.xml \
