--- a/jenkinsfile
+++ b/jenkinsfile
@@ -137,16 +137,15 @@ pipeline {
                     ]]) {
  
                     sh '''
-                    docker rm -f py-app || true
-                    docker rmi -f flask-vault-app:latest || true
-                    docker build -t flask-vault-app:latest .
-                    docker run -d -p 8005:5000 -e API_KEY=$APP1 --name py-app flask-vault-app:latest
+                    //docker rm -f py-app || true
+                    
+                    docker run -d -p 8005:5000 -e API_KEY=$APP1 --name py-app $DOCKERHUB_USER/$IMAGE_NAME:latest
                     '''
                     }
                 }
             }
         }
-        
+
         stage('OWASP ZAP Scan') {
             steps {
                 sh '''#!/bin/bash
